# hyprland-workspace-indicator

./: .clang-format  .clang-tidy  .gitignore  .prettierignore  .prettierrc  CMakeLists.txt  Makefile  README.md  clang-tidy.sh  cleanup.sh  compile_commands.json  configure  package-lock.json  pyproject.toml  setup.sh
.github/: ISSUE_TEMPLATE
.github/ISSUE_TEMPLATE/: debt---debt-.md  debt--.md  debt.md  defect.md  enhancement.md  feature.md
.github/workflows/: clang-format-check.yml  clang-tidy-review.yml  cmake-build.yml  commitlint.yml  include-what-you-use.yml  linter.yml  prettier.yml
docs/: CONTRIBUTING.md  DEVELOPER.md  README.md  package-diagram.drawio  pull_request_template.md
docs/ISSUE_TEMPLATE/: debt.md  defect.md  enhancement.md  feature.md
docs/issue-templates/: debt.md  defect.md  enhancement.md
docs/models/: use-case-diagram.drawio
example/: example.scss  example.yuck  workspaces_script
example/.config/eww/: eww.scss  eww.yuck  variables.yuck  workspaces.sh
example/.config/eww/css/: example-style.scss
example/.config/eww/widgets/: example-widget.yuck
example/.config/eww/windows/: example-window.yuck
include/data/: constants.h  data_structures.h
include/helpers/: array_handling.h  hyprland_struct_handling.h  json_handling.h
include/utils/: bit_handling.h  event_handling.h  hyprland_socket_handling.h
src/: main.c
src/helpers/: array_handling.c  hyprland_struct_handling.c  json_handling.c
src/utils/: bit_handling.c  event_handling.c  hyprland_socket_handling.c
