[project]
name = "hyprland-workspace-indicator"
version = "0.9.1"
description = "A multi-monitor workspace indicator JSON output for use with EWW and Hyprland."
readme = "docs/README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
major_version_zero = true
